--- a/index.html
+++ b/index.html
@@ -16,34 +16,24 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
   </head>
   <body>
-    <div class="card">
-      <img src="images/image-qr-code.png" alt="qr-code" class="card__image" />
-      <div class="card__body">
-        <h1 class="card__title">Improve your front-end skills by building projects</h1>
-        <p class="card__description">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
+    <main>
+      <div class="card">
+        <img src="images/image-qr-code.png" alt="qr-code" class="card__image" />
+        <div class="card__body">
+          <h1 class="card__title">Improve your front-end skills by building projects</h1>
+          <p class="card__description">
+            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by
-      <a href="https://www.frontendmentor.io/profile/boedegoat" target="_blank">Boedegoat</a>.
-    </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by
+        <a href="https://www.frontendmentor.io/profile/boedegoat" target="_blank">Boedegoat</a>.
+      </div>
+    </main>
   </body>
 </html>
